cmake_minimum_required(VERSION 3.0)
project(Mario)

set(CMAKE_CXX_STANDARD 17)

# Add necessary packages
find_package(SDL2 REQUIRED)
find_package(SDL2_mixer REQUIRED)
find_package(OpenGL REQUIRED)
find_package(DevIL REQUIRED)
find_package(Boost REQUIRED)
find_package(rapidxml REQUIRED)

include_directories(source)
include_directories(source/LevelGenerators)

add_executable(Mario
        source/LevelGenerators/HillyLevelGenerator.cpp
        source/LevelGenerators/HillyLevelGenerator.hpp
        source/LevelGenerators/SimpleLevelGenerator.cpp
        source/LevelGenerators/SimpleLevelGenerator.hpp
        source/LevelGenerators/SmbLevelLoader.cpp
        source/LevelGenerators/SmbLevelLoader.hpp
        source/LevelGenerators/TestLevelGenerator.cpp
        source/LevelGenerators/TestLevelGenerator.hpp
        source/Animation.cpp
        source/Animation.hpp
        source/Background.cpp
        source/Background.hpp
        source/Beetle.cpp
        source/Beetle.hpp
        source/BitmapFont.cpp
        source/BitmapFont.hpp
        source/Blaster.cpp
        source/Blaster.hpp
        source/Block.cpp
        source/Block.hpp
        source/Bullet.cpp
        source/Bullet.hpp
        source/Camera.cpp
        source/Camera.hpp
        source/Coin.cpp
        source/Coin.hpp
        source/Color.cpp
        source/Color.hpp
        source/DamageBlock.cpp
        source/DamageBlock.hpp
        source/Enemy.cpp
        source/Enemy.hpp
        source/Entity.cpp
        source/Entity.hpp
        source/EntityTypes.cpp
        source/EntityTypes.hpp
        source/Enums.cpp
        source/Enums.hpp
        source/Episode.cpp
        source/Episode.hpp
        source/Exception.hpp
        source/Fireball.cpp
        source/Fireball.hpp
        source/Flower.cpp
        source/Flower.hpp
        source/Font.cpp
        source/Font.hpp
        source/FpsManager.cpp
        source/FpsManager.hpp
        source/Game.cpp
        source/Game.hpp
        source/GameSession.cpp
        source/GameSession.hpp
        source/GameState.cpp
        source/GameState.hpp
        source/Globals.cpp
        source/Globals.hpp
        source/Goomba.cpp
        source/Goomba.hpp
        source/GrowingLadder.cpp
        source/GrowingLadder.hpp
        source/HammerBro.cpp
        source/HammerBro.hpp
        source/Image.cpp
        source/Image.hpp
        source/InfinityState.cpp
        source/InfinityState.hpp
        source/IniFile.cpp
        source/IniFile.hpp
        source/InputManager.cpp
        source/InputManager.hpp
        source/Item.cpp
        source/Item.hpp
        source/Koopa.cpp
        source/Koopa.hpp
        source/Ladder.cpp
        source/Ladder.hpp
        source/Lakitu.cpp
        source/Lakitu.hpp
        source/Leaf.cpp
        source/Leaf.hpp
        source/Level.cpp
        source/Level.hpp
        source/LevelEnd.cpp
        source/LevelEnd.hpp
        source/LevelGenerator.hpp
        source/LevelTheme.cpp
        source/LevelTheme.hpp
        source/LoadingState.cpp
        source/LoadingState.hpp
        source/Location.cpp
        source/Location.hpp
        source/Logger.cpp
        source/Logger.hpp
        source/Main.cpp
        source/MainState.cpp
        source/MainState.hpp
        source/Map.cpp
        source/Map.hpp
        source/MapState.cpp
        source/MapState.hpp
        source/Math.cpp
        source/Math.hpp
        source/Mushroom.cpp
        source/Mushroom.hpp
        source/Music.cpp
        source/Music.hpp
        source/NoiseSource.hpp
        source/Paratroopa.cpp
        source/Paratroopa.hpp
        source/Particle.cpp
        source/Particle.hpp
        source/PerlinNoiseSource.hpp
        source/Pipe.cpp
        source/Pipe.hpp
        source/Plant.cpp
        source/Plant.hpp
        source/Player.cpp
        source/Player.hpp
        source/Random.cpp
        source/Random.hpp
        source/Rendering.cpp
        source/Rendering.hpp
        source/ReserveItem.cpp
        source/ReserveItem.hpp
        source/ResourceManager.cpp
        source/ResourceManager.hpp
        source/Settings.cpp
        source/Settings.hpp
        source/Shell.cpp
        source/Shell.hpp
        source/Singleton.hpp
        source/Sound.cpp
        source/Sound.hpp
        source/Spiny.cpp
        source/Spiny.hpp
        source/Sprite.cpp
        source/Sprite.hpp
        source/Star.cpp
        source/Star.hpp
        source/StringSwitch.cpp
        source/StringSwitch.hpp
        source/Text.cpp
        source/Text.hpp
        source/TextParticle.cpp
        source/TextParticle.hpp
        source/Texture.cpp
        source/Texture.hpp
        source/Tile.cpp
        source/Tile.hpp
        source/TransitionState.cpp
        source/TransitionState.hpp
        source/Types.hpp
        source/Vector2.hpp
        source/Vector3.hpp
        source/World.cpp
        source/World.hpp)

set(CMAKE_BUILD_TYPE Debug)
